@startuml
set namespaceSeparator none

hide method

namespace admin.service.model.domain {

    class Account {
        - id: Long
        - email: String
        - state: AccountState
        - avatarId: String
        - createdDate: Date
    }

    class Company {
        - name: String
    }

    class Employee {
        - firstName: String
        - lastName: String
    }

    abstract class User {
        - id: Long
        - email: String
        - password: String
        - active: Boolean
        - createdDate: Date
        - account: Account
    }

    class Contract {
        - id: Long
        - salary: Double
        - initDate: Date
        - endDate: Date
        - employee: Employee
    }

    Company -up-|> User

    Employee -up-|> User

     User *-right-> Account : account

    Contract *-down-> Employee : employee
}
@enduml